[package]
name = "jito-vault-core"
description = "Vault core library"
version = "0.0.5"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-vault-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

###
### CERTORA SETTINGS AND LIBRARIES
###

[lib]
crate-type = ["cdylib", "lib"]

[features]
certora = ["dep:cvlr", "dep:cvlr-solana"]

[dependencies.cvlr]
workspace = true
optional = true

[dependencies.cvlr-solana]
workspace = true
optional = true

[package.metadata.certora]
sources = [
            "../Cargo.toml",
            "Cargo.toml",
            "src/**/*.rs",
            "../vault_core/src/*.rs",
            "../restaking_core/src/*.rs",
            "../restaking_program/**/*.rs",
            "../core/**/*.rs",
	    ]

solana_inlining = ["../certora/envs/inlining.txt"]
solana_summaries = ["../certora/envs/summaries.txt"]
