[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18"
solana-program-test = "1.18"
solana-sdk = "1.18"
anchor-spl = "0.30.1"
spl-token = "6.0.0"
color_of_the_epoch = { version = "0.1.0", path = "../programs/color_of_the_epoch" }
